--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,10 @@ requires-python = ">=3.11"
 dependencies = [
     "openai-agents>=0.0.6",
 ]
+
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "flake8>=7.1.2",
+    "isort>=6.0.1",
+]
