--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "openai-agents>=0.0.6",
+    "python-dotenv>=1.0.1",
 ]
 
 [dependency-groups]
