--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "openai-agents>=0.0.6",
+    "numpy>=2.2.4",
+    "openai-agents[voice]>=0.0.6",
     "python-dotenv>=1.0.1",
+    "sounddevice>=0.5.1",
 ]
 
 [dependency-groups]
