--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "mlflow>=2.21.0",
     "numpy>=2.2.4",
     "openai-agents[voice]>=0.0.6",
     "python-dotenv>=1.0.1",
