--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "mlflow>=2.21.0",
     "numpy>=2.2.4",
     "openai-agents[voice]>=0.0.6",
+    "playwright>=1.51.0",
     "python-dotenv>=1.0.1",
     "sounddevice>=0.5.1",
 ]
