--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "gradio>=5.23.1",
     "mlflow>=2.21.0",
     "numpy>=2.2.4",
     "openai-agents[voice]>=0.0.6",
     "playwright>=1.51.0",
     "python-dotenv>=1.0.1",
+    "rich>=13.9.4",
     "sounddevice>=0.5.1",
 ]
 
