--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "gradio>=5.23.1",
     "mlflow>=2.21.0",
     "numpy>=2.2.4",
-    "openai-agents[voice]>=0.0.6",
+    "openai-agents[viz,voice]>=0.0.6",
     "playwright>=1.51.0",
     "python-dotenv>=1.0.1",
     "rich>=13.9.4",
